--- a/reddit.css
+++ b/reddit.css
@@ -78,6 +78,7 @@ a[href*="match thread"].title:visited {
 
 body {
   color: #021f42;
+  background-color: #EEEEEE;
 }
 
 a:link {
@@ -240,14 +241,22 @@ a.subbarlink {
 }
 
 .link {
-  margin-bottom: 10px;
-  margin-right: 10 px;
+  margin: 0px;
   padding: 8px;
-  border: 1px dashed #9D7E40
+  border-bottom: 1px solid #ddd;
 }
 
 .content {
   margin-top: 10px
+}
+
+.sitetable:nth-of-type(1) {
+  list-style-type: none;
+  width: calc(97% - 300px);
+  margin: 15px;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 2px 2px 14px 2px rgba(0, 0, 0, .15);
 }
 
 .tabmenu li {
@@ -660,8 +669,7 @@ div.side div.spacer:nth-of-type(1):before {
   padding-right: 10px;
   margin-right: 0px;
   width: 299px;
-  border-left: #E1E1E1 solid 1px;
-  background-color: #f5f5f5;
+  background-color: transparent;
   padding: 8px;
 }
 
@@ -912,7 +920,7 @@ div.side div.spacer:nth-of-type(1):before {
 
 .linkflair-one .linkflairlabel {
   background-color: #6097CB;
-  color: #fff; 
+  color: #fff;
 }
 
 .linkflair-two .linkflairlabel {
