--- a/reddit.css
+++ b/reddit.css
@@ -398,8 +398,7 @@ a.subbarlink {
 /* === start: rotating banner === */
 
 div.side div.spacer:nth-of-type(1) {
-  padding-top: 400px;
-  /*Change "400px" to the height to the height of your image*/
+  padding-top: 415px;
 }
 
 /*Optional- adds a caption under that image*/
@@ -417,14 +416,16 @@ div.side div.spacer:nth-of-type(1):before {
   box-sizing: border-box;
   position: absolute;
   right: 15px;
-  top: 208px;
+  top: 215px;
   width: 300px;
-  height: 400px;
-  border: 1px solid #222;
+  height: 399px;
   background-size: cover;
+  border: none;
+  border-radius: 8px;
   opacity: 0;
   -webkit-animation: banner1 40s linear infinite;
   animation: banner1 40s linear infinite;
+  box-shadow: 2px 2px 14px 2px rgba(0, 0, 0, .15);
 }
 
 /*Change Images in Sidebar: Paste 4th image code into 5th slot, 3rd image code to 4th slot, 2nd image code to 3rd slot, 1st image code to 2nd spot, put new image code in spot 1. Spot 1 will hold first image user sees.*/
@@ -433,7 +434,6 @@ div.side div.spacer:nth-of-type(1):before {
   opacity: 1;
   z-index: 1;
   background-image: url(%%dockalplay400%%);
-  content:
 }
 
 .side > .spacer:nth-child(4):after {
