--- a/reddit.css
+++ b/reddit.css
@@ -413,6 +413,14 @@ div.side div.spacer:nth-of-type(1) {
   margin: 0;
 }
 
+.side .spacer:nth-of-type(4) {
+  background: white;
+  padding: 10px;
+  border-radius: 8px;
+  margin-top: 15px;
+  box-shadow: 2px 2px 14px 2px rgba(0, 0, 0, .15);
+}
+
 
 /*Optional- adds a caption under that image*/
 
