--- a/reddit.css
+++ b/reddit.css
@@ -391,10 +391,6 @@ a.subbarlink {
   cursor: default
 }
 
-
-
-/*Sidebar*/
-
 /*Sidebar*/
 
 /*********sidebar image*****300by400****/
@@ -422,6 +418,26 @@ div.side div.spacer:nth-of-type(1) {
   border: none;
 }
 
+.sidecontentbox .content {
+  border: none;
+}
+
+.sidecontentbox {
+  padding: 10px;
+  border-radius: 8px;
+  margin-top: 15px;
+  box-shadow: 2px 2px 14px 2px rgba(0, 0, 0, .15);
+  background: white;
+  border: none;
+}
+
+#moderation_tools {
+  background: white;
+  padding: 10px;
+  border-radius: 8px;
+  margin-top: 15px;
+  box-shadow: 2px 2px 14px 2px rgba(0, 0, 0, .15);
+}
 
 /*Optional- adds a caption under that image*/
 
