--- a/reddit.css
+++ b/reddit.css
@@ -254,7 +254,7 @@ a.subbarlink {
   margin-top: 10px
 }
 
-#siteTable {
+#siteTable:first-of-type {
   list-style-type: none;
   width: calc(97% - 300px);
   margin: 15px;
@@ -418,6 +418,14 @@ div.side div.spacer:nth-of-type(1) {
   border: none;
 }
 
+.login-form-side {
+  border-radius: 8px;
+  margin-top: 15px;
+  box-shadow: 2px 2px 14px 2px rgba(0, 0, 0, .15);
+  background: white;
+  border: none;
+}
+
 .sidecontentbox .content {
   border: none;
 }
@@ -437,6 +445,40 @@ div.side div.spacer:nth-of-type(1) {
   border-radius: 8px;
   margin-top: 15px;
   box-shadow: 2px 2px 14px 2px rgba(0, 0, 0, .15);
+}
+
+.comment {
+  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, .15);
+  border-radius: 3px;
+  overflow: hidden;
+  margin: 0px 8px 8px 10px !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  border-color: rgb(230, 230, 230) !important;
+  border-image: initial !important;
+  padding: 5px 8px 5px 5px !important;
+  background: white;
+}
+
+.comment .comment {
+  box-shadow: none;
+}
+
+/* This is idiotic BS to get comments RES style for non-RES users */
+
+.comment .comment,
+.comment .comment .comment .comment,
+.comment .comment .comment .comment .comment .comment,
+.comment .comment .comment .comment .comment .comment .comment .comment,
+.comment .comment .comment .comment .comment .comment .comment .comment .comment .comment {
+  background-color: rgb(247, 247, 248) !important;
+}
+
+.comment .comment .comment,
+.comment .comment .comment .comment .comment,
+.comment .comment .comment .comment .comment .comment .comment,
+.comment .comment .comment .comment .comment .comment .comment .comment .comment {
+  background-color: rgb(255, 255, 255) !important;
 }
 
 /*Optional- adds a caption under that image*/
